# gpui-router

./: .gitignore  .rustfmt.toml  Cargo.toml
crates/router/: Cargo.toml
crates/router-macros/src/: derive_into_layout.rs
crates/router/examples/: basic.rs  nested_router.rs  params.rs  sub_router.rs
crates/router/src/: hooks.rs  lib.rs  nav_link.rs  route.rs  router_tests.rs  routes.rs  state.rs
