[package]
name = "gpui-router"
version = "0.3.0"
description = "A router for GPUI App."
keywords = ["gpui", "router", "ui", "framework"]
categories = ["gui"]
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish = true
documentation = "https://docs.rs/gpui-router"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
gpui.workspace = true
gpui-router-macros.workspace = true
hashbrown.workspace = true
matchit.workspace = true
smallvec.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "wayland"] }